fix: dockerfile remove access line

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=9002
+PORT=9001
 PROXY_MOCK=false
 MATCH_TO_KART_RABBIT_URI=amqp://localhost:5672
 RABBIT_RETRY_MIN_TIMEOUT=1000
@@ -8,8 +8,8 @@ RABBIT_MOCK_MATCH_TO_KART=true
 SOUF_URI=http://localhost:7700/api/sf
 AKA_URI=http://localhost:7700/api/aka
 EIGHT_SOCKS_URI=http://localhost:7700/api/eightSocks
-CITY_URI=http://localhost:7700/api/aD/S
-AD_S_URI=http://localhost:7700/api/city
+CITY_URI=http://localhost:7700/api/city
+AD_S_URI=http://localhost:7700/api/aD/S
 AD_NN_URI=http://localhost:7700/api/aD/NN
 
 BEFORE_MATCH_QUEUE_NAME=beforematch
