feature: get all route

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ EIGHT_SOCKS_URI=http://localhost:7700/api/eightSocks
 CITY_URI=http://localhost:7700/api/city
 AD_S_URI=http://localhost:7700/api/aD/S
 AD_NN_URI=http://localhost:7700/api/aD/NN
-
+LOGGER_MOCK=true
 BEFORE_MATCH_QUEUE_NAME=beforematch
 
 SPIKE_MOCK_TO_ME=true
