--- a/CD/helmfile.yaml
+++ b/CD/helmfile.yaml
@@ -8,8 +8,8 @@ repositories:
   password: {{ requiredEnv "HARBOR_PASSWORD" }}
   
 releases:
-- name: variables
-  namespace: karting
+- name: splitter
+  namespace: genesis
   chart: yesodot/common
   version: {{ requiredEnv "COMMON_VERSION" | default "0.1.0" }}
   values:
