--- a/CD/values.yaml
+++ b/CD/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 
 images:
   PullSecrets: 
-    name: kartingreg
+    name: kartoffelreg
   repository: genesisproject.azurecr.io/splitter
   tag: "latest"
 
