clean: formatting code

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MATCH_TO_KART_RABBIT_URI=amqp://localhost:5672
 RABBIT_RETRY_MIN_TIMEOUT=1000
 RABBIT_RETRY_RETRIES=10
 RABBIT_RETRY_FACTOR=1.8
-RABBIT_MOCK_MATCH_TO_KART=false
+RABBIT_MOCK_MATCH_TO_KART=true
 SOUF_URI=http://localhost:7700/api/sf
 AKA_URI=http://localhost:7700/api/aka
 EIGHT_SOCKS_URI=http://localhost:7700/api/eightSocks
@@ -13,7 +13,7 @@ AD_NN_URI=http://localhost:7700/api/aD/NN
 LOGGER_MOCK=true
 BEFORE_MATCH_QUEUE_NAME=beforematch
 
-SPIKE_MOCK_TO_ME=true
+SPIKE_MOCK_TO_ME=false
 SPIKE_MOCK_TO_DS_SERVICE=true
 REDIS_URL=redis://localhost:6379
 SPIKE_URL=https://ospike.northeurope.cloudapp.azure.com/oauth2/token
